[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://shaders/single_colour.shader" type="Shader" id=2]
[ext_resource path="res://shaders/single_colour_border_flashing.shader" type="Shader" id=3]
[ext_resource path="res://scenes/InteractiveEnv/TrafficLight.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/red = 255.0
shader_param/green = 0.0
shader_param/blue = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/red = 255.0
shader_param/green = 220.0
shader_param/blue = 0.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/red = 0.0
shader_param/green = 255.0
shader_param/blue = 0.0

[node name="TrafficLight" type="Node2D"]
script = ExtResource( 4 )
mode = "timer"

[node name="sprPole" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 0.25, 0.5 )
texture = ExtResource( 1 )

[node name="sprFrame" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.5, 1 )
texture = ExtResource( 1 )

[node name="sprRedLight" type="Sprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="sprAmberLight" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, -32 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="sprGreenLight" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -48 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="tmrTrafficLight" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="timeout" from="tmrTrafficLight" to="." method="_on_tmrTrafficLight_timeout"]
